--- a/model.ipynb
+++ b/model.ipynb
@@ -17,7 +17,9 @@
     "of model training, loss minimization, and evaluation that underpin more\n",
     "complex neural network architectures.\n",
     "\n",
-    "This notebook builds on concepts from Zhang et al., [*Dive into Deep Learning*](https://d2l.ai/index.html), particularly abstractions for data loading and training loops. All such components have been **adapted and customized** to illustrate their use in a linear regression context. The model, dataset processing, and analysis were implemented independently.\n",
+    "This notebook builds on concepts from Zhang et al., [*Dive into Deep Learning*](https://d2l.ai/index.html), particularly abstractions for data loading and training loops.\n",
+    "All such components have been **adapted and customized** to illustrate their use in a linear regression context. The model, dataset processing, and analysis were implemented independently. Abstractions can be\n",
+    "referenced in `../abstractions/torch.py`.\n",
     "### Dataset\n",
     "\n",
     "The Boston Housing dataset contains socioeconomic and geographic features\n",
